packages/beff-core/tests/snapshots/report_error__tests__fail_upper_case_handler.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 4 │             GET: (): string => impl()
   │             ─┬─  
   │              ╰─── Not an HTTP method. Valid values are `get`, `post`, `put`, `delete`, `patch`, `options`
───╯

Error: ~~~
   ╭─[<unknown>:1:1]
   │
 4 │             GET: (): string => impl()
   │             ─┬─  
   │              ╰─── Not an HTTP method. Valid values are `get`, `post`, `put`, `delete`, `patch`, `options`
───╯

